--- a/price.css
+++ b/price.css
@@ -20,7 +20,7 @@ img {
 .white-text{
   color: white;
 }
-body{
+/* body{
   background-image: url("./xhosa.bg.jpg");
   background-size: cover;
-}
+} */
